--- a/templates/partials/player/bio.hbs
+++ b/templates/partials/player/bio.hbs
@@ -1,11 +1,9 @@
 <section class="col-lg-6 col-sm-6">
   <div id="game_code" class="row room-container">
-		<h3>"Everyone, please introduce your character roles. You will be playing from this perspective this round."</h3>
-
-		Press next when everyone has introduced themselves
+  	{{jsonPrint this}}
 
 	</div>
-	<div class="form row {{!-- hidden-el --}}" id="decider">
+	<div class="form row" id="decider">
     <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
 	</div>
 </section>
