--- a/templates/partials/player/bio.hbs
+++ b/templates/partials/player/bio.hbs
@@ -1,5 +1,5 @@
 <section class="col-lg-6 col-sm-6">
-  <div id="game_code" class="row room-container">
+  <div class="row room-container">
   
   	<h3>{{name}} the {{title}}</h3>
 
