--- a/templates/partials/player/bio.hbs
+++ b/templates/partials/player/bio.hbs
@@ -1,4 +1,4 @@
-<section class="col-lg-6 col-sm-6">
+<section class="col-lg-6 col-sm-6 player-bio">
   <div class="row room-container">
   
   	<h3>{{name}} the {{title}}</h3>
