--- a/templates/partials/decider/bio.hbs
+++ b/templates/partials/decider/bio.hbs
@@ -1,7 +1,5 @@
-<section class="col-lg-6 col-sm-6">
-  <div class="row room-container">
-		<h3>"Everyone, please introduce your character roles. You will be playing from this perspective this round."</h3>
+<div class="row room-container">
+	<h3>"Everyone, please introduce your character roles. You will be playing from this perspective this round."</h3>
 
-		Press next when everyone has introduced themselves
-
-</section>
+	Press next when everyone has introduced themselves
+</div>
