--- a/templates/partials/player/bio.hbs
+++ b/templates/partials/player/bio.hbs
@@ -1,4 +1,4 @@
-<section class="col-lg-6 col-sm-6 player-bio">
+<section class="player-bio">
   <div class="row room-container">
   
   	<h3>{{name}} the {{title}}</h3>
@@ -6,7 +6,5 @@
   	{{{bio.html}}}
 
 	</div>
-	<div class="form row" id="decider">
-    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
-	</div>
+
 </section>
