--- a/templates/partials/decider/bio.hbs
+++ b/templates/partials/decider/bio.hbs
@@ -1,5 +1,5 @@
 <div class="row room-container">
-	<h3>"Everyone, please introduce your character roles. You will be playing from this perspective this round."</h3>
+	<h3 class="read">"Everyone, please introduce your character roles. You will be playing from this perspective this round."</h3>
 
 	Press next when everyone has introduced themselves
 </div>
